--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-bathroom.yaml
@@ -10,9 +10,32 @@ cards:
     template: card_title
     name: Guest Bathroom
 
+  - type: horizontal-stack
+    cards:
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.guest_bath_climate_air_temperature
+        variables:
+          ulm_card_graph_color: "var(--google-red)"
+          ulm_card_graph_name: Temperature
+          ulm_card_graph_entity: sensor.guest_bath_climate_air_temperature
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.guest_bath_climate_humidity
+        variables:
+          ulm_card_graph_color: "var(--google-blue)"
+          ulm_card_graph_name: Humidity
+          ulm_card_graph_entity: sensor.guest_bath_climate_humidity
+
   - type: "custom:button-card"
     template: card_title
     label: Devices
+
+  - type: custom:decluttering-card
+    template: z_wave_climate
+    variables:
+      - sensor_prefix: guest_bath
+      - node_number: 8
 
   - type: "custom:button-card"
     template: card_title
