--- a/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
@@ -200,15 +200,8 @@ cards:
   - type: custom:decluttering-card
     template: z_wave_climate
     variables:
-      - firmware_sensor: update.office_climate_firmware
-      - battery_sensor: sensor.office_climate_battery_level
-      - temperature_sensor: sensor.office_climate_air_temperature
-      - humidity_sensor: sensor.office_climate_humidity
-      - overheat_sensor: binary_sensor.office_climate_overheat_detected
-      - underheat_sensor: binary_sensor.office_climate_underheat_detected
-      - moisture_sensor: binary_sensor.office_climate_moisture_alarm
-      - battery_level_sensor: binary_sensor.office_climate_low_battery_level
-      - status_sensor: sensor.node_4_node_status
+      - sensor_prefix: office
+      - node_number: 5
 
   - type: "custom:button-card"
     template: card_title
