--- a/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/guest-room.yaml
@@ -10,6 +10,23 @@ cards:
     template: card_title
     name: Guest Room
 
+  - type: horizontal-stack
+    cards:
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.guest_bedroom_climate_air_temperature
+        variables:
+          ulm_card_graph_color: "var(--google-red)"
+          ulm_card_graph_name: Temperature
+          ulm_card_graph_entity: sensor.guest_bedroom_climate_air_temperature
+      - type: "custom:button-card"
+        template: card_graph
+        entity: sensor.guest_bedroom_climate_humidity
+        variables:
+          ulm_card_graph_color: "var(--google-blue)"
+          ulm_card_graph_name: Humidity
+          ulm_card_graph_entity: sensor.guest_bedroom_climate_humidity
+
   - type: "custom:button-card"
     template: card_title
     label: Devices
@@ -25,6 +42,12 @@ cards:
       ulm_card_cover_enable_controls: true
       ulm_card_cover_enable_slider: true
       ulm_card_cover_color: green
+
+  - type: custom:decluttering-card
+    template: z_wave_climate
+    variables:
+      - sensor_prefix: guest_bedroom
+      - node_number: 9
 
   - type: "custom:button-card"
     template: card_title
