--- a/ui_lovelace_minimalist/dashboard/views/rooms/garage.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/garage.yaml
@@ -1,31 +1,11 @@
 title: "Garage"
 path: "garage"
 cards:
-  - type: "custom:button-card"
-    template: chip_back
+  - type: custom:decluttering-card
+    template: room header
     variables:
-      ulm_chip_back_path: home
-
-  - type: "custom:button-card"
-    template: card_title
-    name: Garage
-
-  - type: horizontal-stack
-    cards:
-      - type: "custom:button-card"
-        template: card_graph
-        entity: sensor.garage_climate_air_temperature
-        variables:
-          ulm_card_graph_color: "var(--google-red)"
-          ulm_card_graph_name: Temperature
-          ulm_card_graph_entity: sensor.garage_climate_air_temperature
-      - type: "custom:button-card"
-        template: card_graph
-        entity: sensor.garage_climate_humidity
-        variables:
-          ulm_card_graph_color: "var(--google-blue)"
-          ulm_card_graph_name: Humidity
-          ulm_card_graph_entity: sensor.garage_climate_humidity
+      - sensor_prefix: garage
+      - room_name: Garage
 
   - type: "custom:button-card"
     template: card_title
@@ -67,11 +47,7 @@ cards:
   - type: custom:decluttering-card
     template: leak_sensors
     variables:
-      - leak_sensor: binary_sensor.water_heater_leak_sensor
-      - battery_sensor: sensor.water_heater_leak_sensor_battery
-      - battery_update_sensor: sensor.water_heater_leak_sensor_last_battery_update
-      - reset_sensor: sensor.water_heater_leak_sensor_last_reset
-      - last_leak_sensor: sensor.water_heater_leak_sensor_last_leak
+      - sensor_prefix: water_heater
 
   - type: horizontal-stack
     cards:
