--- a/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/master-bedroom.yaml
@@ -1,31 +1,11 @@
 title: "Master Bedroom"
 path: "master-bedroom"
 cards:
-  - type: "custom:button-card"
-    template: chip_back
+  - type: custom:decluttering-card
+    template: room header
     variables:
-      ulm_chip_back_path: home
-
-  - type: "custom:button-card"
-    template: card_title
-    name: Master Bedroom
-
-  - type: horizontal-stack
-    cards:
-      - type: "custom:button-card"
-        template: card_graph
-        entity: sensor.master_bedroom_climate_air_temperature
-        variables:
-          ulm_card_graph_color: "var(--google-red)"
-          ulm_card_graph_name: Temperature
-          ulm_card_graph_entity: sensor.master_bedroom_climate_air_temperature
-      - type: "custom:button-card"
-        template: card_graph
-        entity: sensor.master_bedroom_climate_humidity
-        variables:
-          ulm_card_graph_color: "var(--google-blue)"
-          ulm_card_graph_name: Humidity
-          ulm_card_graph_entity: sensor.master_bedroom_climate_humidity
+      - sensor_prefix: master_bedroom
+      - room_name: Master Bedroom
 
   - type: "custom:button-card"
     template: card_title
