--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 .storage
 .cloud
 .google.token
+custom_components
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 #ip_bans.yaml
