--- a/scenes.yaml
+++ b/scenes.yaml
@@ -10,28 +10,28 @@
       - brightness
       - color_temp
       - hs
-      icon: mdi:lightbulb-group
-      friendly_name: Kitchen Bulbs
-      supported_features: 0
-      color_mode: hs
-      brightness: 255
-      color_temp_kelvin:
-      color_temp:
+      color_mode: color_temp
+      brightness: 51
+      color_temp_kelvin: 2000
+      color_temp: 500
       hs_color:
-      - 51
-      - 100
+      - 30.601
+      - 94.547
       rgb_color:
       - 255
-      - 216
-      - 0
+      - 136
+      - 13
       xy_color:
-      - 0.493
-      - 0.475
+      - 0.599
+      - 0.382
       entity_id:
       - light.kitchen_bulb_1
       - light.le_rgbcwbr30_3
       - light.kitchen_bulb_3
       - light.le_rgbcwbr30
+      icon: mdi:lightbulb-group
+      friendly_name: Kitchen Bulbs
+      supported_features: 0
       state: 'on'
   icon: mdi:moon-waning-crescent
   metadata:
